# hot3d

hot3d/: dataset_api.py  pyproject.toml
hot3d/data_loaders/: AriaDataProvider.py  HandDataProviderBase.py  ManoHandDataProvider.py  QuestDataProvider.py  UmeTrackHandDataProvider.py
